welcome.lessons.welcome.array.array667.Array667.scala.error
array667:26: error: ')' expected but 'if' found.
if(indexOfValue(nums,6)==(-1)){
^